static/css/styles.css
/* ... */
.docs-layout .docs-navigation .mdl-navigation__link:hover {

}

.docs-layout .docs-navigation .mdl-navigation__link .empty-icon {
  display: inline-block;
  width: 24px;
}

.docs-header .mdl-layout__drawer-button .material-icons {
  font-size: 24px;
  color: rgba(255, 255, 255);
  margin-right: 32px;
  padding-left: 20px;
}

.docs-header .mdl-layout__drawer-button {
  display: none;
}

@media screen and (max-width: 1025px) {
  .docs-header .mdl-layout__drawer-button {
    display: block;
  }
}

/*

  hide large content and show small content when screen is small

*/
.docs-wide-content {
  display: none;
}

.docs-narrow-content {
  display: none;
}

@media screen and (min-width: 1025px) {
  .docs-wide-content {
    display: inline-block;
  }
}

@media screen and (max-width: 1025px) {
  .docs-narrow-content {
    display: inline-block;
  }
}


hr.margin {
  margin-top:50px;
}

.listmargin {
  margin-top:20px;
}

/*

  apply material design rules to page content

*/

.docs-content {


  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 40px;
  /* left offset for sidebar */
  margin-left: 300px;
  /* this needs to be the 300px for the sidebar - 120px padding - 250px scrollspy */
  width: calc(100% - 610px);
}

@media screen and (max-width: 1025px) {
  .docs-content {

    /* top offset for topbar */
    padding-top: 47px;
    /* left offset for sidebar */
    margin-left: 0px;
    /* this needs to be the 300px for the sidebar - 120px padding */
    width: calc(100% - 60px);
  }
}

.docs-content * {
  font-size: 15px;

}

.docs-content p {
  color: rgb(51, 68, 76) !important;
  font-weight: 100;
  font-family: "Open Sans",sans-serif !important;
}

.docs-content a {
  color: #f15a24;
  font-weight: normal;
}

.docs-content a * {
  color: #f15a24;
  font-weight: normal;
}

.docs-content p > code {
  color: #666;
  background-color: #f5f5f5;
  padding: 4px;
  font-weight: 500;
}

.docs-content .header-wrapper {
  margin-top: 35px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.docs-content .header-container {
  border-left: 1px solid #ff0000;
}

.docs-content .page-title {
  margin: 0px;
  padding: 0px;
  padding-left: 20px;
  padding-bottom: 10px;
}

.docs-content .page-subtitle {
  margin: 0px;
  padding: 0px;
  padding-left: 20px;
  padding-bottom: 10px;
  color: #999;
}

.docs-content .github-link-cell {
  float: right;
  padding-top: 12px;
}

/*
  these will be be shown by javascript once the material design classes have been applied
*/
.docs-content table {
  display: none;
  width: 100%;
  margin-top: 30px;
  margin-bottom: 30px;
}

/*
  the default header sizes are a bit too big
*/
.docs-content h1 {
  font-size: 30px;
  font-weight: 500;
}

.docs-content h2 {
  font-size: 24px;
  font-weight: 500;
}

.docs-content h3 {
  font-size: 20px;
  font-weight: 500;
}

.docs-content h4 {
  font-size: 18px;
  font-weight: 500;
}

.docs-content h5 {
  font-size: 16px;
  font-weight: 500;
}

.docs-content h6 {
  font-size: 14px;
  font-weight: 500;
}

/*
  links
*/

.widelink-container {
  background-color: #FEF8F6;
  color: #dc522b;
  border: 1px solid #dc522b;
  border-radius: 4px;
  margin-right: 5px;
  padding: 20px;
  font-size: 18px;
}

.prevnextlink-container {
  background-color: #ffffff;
  color: #666 !important;
  border-radius: 4px;
  padding: 20px;
  font-size: 18px;
}

.prevnextlink-container * {
  color: #666 !important;
  font-size: 18px;
}

.no-underline {
  text-decoration: none;
}

.float-left {
  float: left;
  display: inline-block;
}

.float-right {
  float: right;
  display: inline-block;
}

.prevnext-small {
  font-size: 0.7em !important;
  font-weight: 200 !important;
}

.img-padding {
  padding: 5px;
}

/*

  menu

*/

.branchlink {

}

.leaflink {
  color: #666;
  font-size: .85em;
}

.infoblock {
  padding: 20px;
  background-color: #f5f5f5;
  border-left: 3px solid #dc522b;
}


/*

  search

*/

#search-hits {
  position: fixed;
  left: 296px;
  top: 113px;
  width: 400px;
  padding: 10px;
  background-color: #fafafa;
  z-index: 1000;
  display: none;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, .15);
  max-height: 450px;
  overflow-y: auto;
}

.search-box-input {
  width: 100% !important;
}

#search-hits .search-hits-empty {
  margin: 15px;
  color: #f15a24;
}

#search-hits .search-hits-row {
  margin: 15px;
  padding-bottom: 15px;
  border-bottom: 1px solid #ccc;
}

#search-hits .search-hits-section {
  font-size: 0.8em;
}

#search-hits .search-hits-section a {
  text-decoration: none;
  color: #f15a24;
}

#search-hits .search-hits-page a {
  color: #666;
}

#search-hits .search-hits-page em {
  color: #f15a24;
}

#search-hits .search-hits-matches a {
  font-size: 0.8em;
  font-weight: normal;
  color: #999;
  text-decoration: none;
}

#search-hits .search-hits-matches em {
  color: #f15a24;
}

@media screen and (max-width: 1025px) {
  #search-hits {
    top: 56px;
  }
}

.ais-search-box-holding {
    display: inline-block;
    position: relative;
    height: 46px;
    white-space: nowrap;
    font-size: 14px;
}

.ais-search-box--input-holding {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    font: inherit;
    background: #fff;
    display: inline-block;
    border: 1px solid #d4d8e3;
    border-radius: 4px;
    box-shadow: 0 1px 1px 0 rgba(85,95,110,.2);
    transition: box-shadow .4s ease,background .4s ease;
    padding: 10px 10px 10px 35px;
    vertical-align: middle;
    white-space: normal;
    height: 46px;
    width: 100%;
}


/*

  content

*/


#page-content {
  width: 100% !important;
}

/*

  scrollspy

*/

#scrollspy-container {
  min-width: 250px;
  max-width: 250px;
  max-width: 300px;
  height: calc(100% - 113px);
  max-height: calc(100% - 113px);
  position: fixed;
  overflow-y: auto;
  top: 113px;
  right: 0px;
}

@media screen and (max-width: 1025px) {
  #scrollspy-container {
    display: none;
  }
}

#scrollspy-container nav {
  padding-right: 20px;
  padding-top: 20px;
  padding-bottom: 30px;
}
/* ... */

